--- a/Plantilla/Plantilla/Debug/Makefile
+++ b/Plantilla/Plantilla/Debug/Makefile
@@ -33,13 +33,15 @@ LINKER_SCRIPT_DEP:=
 
 # Every subdirectory with source files must be described here
 SUBDIRS :=  \
+../Utileria \
 ../Setups
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
 ../main.c \
-../Setups/SetupsMicro.c
+../Setups/SetupsMicro.c \
+../Utileria/Utileria.c
 
 
 PREPROCESSING_SRCS += 
@@ -50,19 +52,23 @@ ASM_SRCS +=
 
 OBJS +=  \
 main.o \
-Setups/SetupsMicro.o
+Setups/SetupsMicro.o \
+Utileria/Utileria.o
 
 OBJS_AS_ARGS +=  \
 main.o \
-Setups/SetupsMicro.o
+Setups/SetupsMicro.o \
+Utileria/Utileria.o
 
 C_DEPS +=  \
 main.d \
-Setups/SetupsMicro.d
+Setups/SetupsMicro.d \
+Utileria/Utileria.d
 
 C_DEPS_AS_ARGS +=  \
 main.d \
-Setups/SetupsMicro.d
+Setups/SetupsMicro.d \
+Utileria/Utileria.d
 
 OUTPUT_FILE_PATH +=Plantilla.elf
 
@@ -86,6 +92,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 Setups/SetupsMicro.o: ../Setups/SetupsMicro.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Utileria/Utileria.o: ../Utileria/Utileria.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
